--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           id="myprompt"
         ></textarea
         ><br />
-        <button type="submit">Squawk !</button>
+        <button type="submit" id="bttnsubmit">Squawk !</button>
+        <span class="loader" id="loader">🦜</span>
       </form>
 
       <div id="iframeContainer" class="iframe-container">
